ISSUP-4677 add new allowPermanentLicenses to GenerateForm field. Change response to return single object instead of array
